--- a/indec.html
+++ b/indec.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First GitHub Repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My First Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi iste accusantium laboriosam quam? Libero, velit. Accusamus expedita asperiores impedit aliquid velit nam reiciendis, iusto a eligendi laborum eius aliquam nobis!</p>
+    </div>
 </body>
 </html>
