added the second and third blog

--- a/indec.html
+++ b/indec.html
@@ -11,5 +11,19 @@
         <h3>My First Website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi iste accusantium laboriosam quam? Libero, velit. Accusamus expedita asperiores impedit aliquid velit nam reiciendis, iusto a eligendi laborum eius aliquam nobis!</p>
     </div>
+    <div>
+        <h3>My Second Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi iste accusantium laboriosam quam? Libero, velit. Accusamus expedita asperiores impedit aliquid velit nam reiciendis, iusto a eligendi laborum eius aliquam nobis!</p>
+    </div>
+   
+    <div>
+        <h3>My Third Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi iste accusantium laboriosam quam? Libero, velit. Accusamus expedita asperiores impedit aliquid velit nam reiciendis, iusto a eligendi laborum eius aliquam nobis!</p>
+    </div>
+    <div>
+        <h3>My Forth                              Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi iste accusantium laboriosam quam? Libero, velit. Accusamus expedita asperiores impedit aliquid velit nam reiciendis, iusto a eligendi laborum eius aliquam nobis!</p>
+    </div>
+   
 </body>
 </html>
