added some picture

--- a/indec.html
+++ b/indec.html
@@ -24,6 +24,10 @@
         <h3>My Forth                              Website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi iste accusantium laboriosam quam? Libero, velit. Accusamus expedita asperiores impedit aliquid velit nam reiciendis, iusto a eligendi laborum eius aliquam nobis!</p>
     </div>
-   
+   <h2>Kono somossa e somossa na jodi tmi bose na thako</h2>
+   <img src="image/download (1).jpg" alt="">
+   <img src="image/download.jpg" alt="">
+   <img src="image/images (1).jpg" alt="">
+   <img src="image/images.jpg" alt="">
 </body>
 </html>
